@@ -6,21 +6,23 @@ DIST Image-ExifTool-9.79.tar.gz 3903753 SHA256 de3da090fad0d9ff99e115cd37f2ebb6f
 DIST Image-ExifTool-9.80.tar.gz 3905030 SHA256 d360b9dc2e8f3ecbebf67d7bdd09724178d2fd51d3a891354a9eedf0cac5023a SHA512 7835aafdd603d2f400728dd4b2c95c9456d48157efd9dc2b4fb00f70833871632582e39d5991e45c87f7e2e6e20fba16381a00f7c5bc7639beb884522120366c WHIRLPOOL a921fffa2eeb4c87b21e29f6752cda2d5f905ee0b1e39b0e0055d06f9c95713503222cec0c84c42cdeea75f60a6b08d053b2655d37fc84215c8accf99e0bada8
 DIST Image-ExifTool-9.81.tar.gz 3906049 SHA256 2dd13ff814d1333f3d81e8f8a0df9660ce1d5921bf0987709b22889247c1f7dd SHA512 d98bb337dfd00f791bec82a5107b59ff762f6b6b1a15aca908b450c45c03b783eff6544243c11b8a3870c656ec802e864fc10d9285b63456d392bb88da46710a WHIRLPOOL 85a9aa6bb94d06347a347715da18ea9a2ab761bbcf3072b1f3e5c598a593373414965bac431fd8c8107a48947b29e52c8f1dd7e0f827a82be857bebab4307591
 DIST Image-ExifTool-9.82.tar.gz 3909913 SHA256 b200673dc2e13898cbcbfd95e6285876d39a8d3beb85ccc1abfca009396e5f4b SHA512 e95e1d78edd2b14a34b422e23332e0185e2a884c16d96643b27f6661e4a08b4c2714b73f9dce2b2f4bb5d24e544da3f61245af91715aeffda65678c747252365 WHIRLPOOL 9c8963748981819c5edecabd4eb8690afa61bdfcc29ed0758df7adf9e5cc05bf05e759a03a6b5ab99c499f354a7a2b602b4e486043e22e4966c91dbc1c31b097
+DIST Image-ExifTool-9.85.tar.gz 3922393 SHA256 118fa9c3787bb9b7d99521cc0330a3d449d8866afb717ed6dbcbb34fd940e145 SHA512 5535d985bd73921006836e804e28cb692c15066a09c9a6475129f92bc071d9ecb83c91d0c1a123243b282a63d1e08879a330234ccd0fe9746ff02bf8adb62f74 WHIRLPOOL 7b8dfab23d492d5823113bdbdc6a8d466ef6a00d12d852c8733928b31a63349d89f9bd7a3da17ae3d5ab1af5f95f7783585969bca871686e2ab2ebe12fabf0cd
 EBUILD exiftool-9.78.ebuild 641 SHA256 619c44b687df90035d6781a383ff38639d40abd6e504078558887afffa65730f SHA512 82c8ed712f4fb7ae8d576d2cf0d66f54d45662fdbeddee89afd6e99e6de74bee7cfc8397c48456cf4d3341f3e77be3f32c9171f0097830d2113a2076d5d1d9e7 WHIRLPOOL 58fd8713793933f8cc8f464753eccb261d9084b6da4aaad138d569f021cc1d2ec7ea1c764ecb843c8f6028611e53e1a567774e82ac263415b42cdca0fff7eb9c
 EBUILD exiftool-9.79.ebuild 645 SHA256 1853002d110f1d6a57239cdfd43aab3d4bc0f31b476161e7f1b0dd97abbadcba SHA512 aa69593e6772240427ac7cbac2fed1392cad1f3092a5d617b780bf565240676396be6a37ba2ecf97f910eff47a01b8eeae356db8e723aa93f994ce915adfb0f4 WHIRLPOOL 0afc272bec79dc4c872eadea5e6b51124d89978e98cc39edb84bc92f13ec78ee5b6759b9c16ced2ee75a0ee04916734ef0f0198b3bf1320ff533a787a71e9e8b
 EBUILD exiftool-9.80.ebuild 645 SHA256 05f61765df5fd03d6bb2c13f457f66f3059290aea56b7511882ac5b0b9240d5b SHA512 3a6f0b1afa67221c5cf230a740571eccaf517fcd9583791323f8f517a0636e3f6fcd50d2b9ab8a45435a2fb200aac0ca5f781a192bff485b292b35667f9a592c WHIRLPOOL 11abfc57d7c28198ad45107375825a9dde465e54d3ec5039d204f31185c7a93cb08556046882ae30deb1dede39c5b0606db804442dce7cca33793fe5fb556a59
 EBUILD exiftool-9.81.ebuild 645 SHA256 1ec8bdd1e49d59d629aba1d70ac0f7115d3ce6b700f8c6a243d730747e42d427 SHA512 b4abcceb7c405e66d0e6c10de2139644c99189c3e0b654fd0b8af0ec200e707b98ff7eaee939166e71e651dc33bc298a5701c8639e2fcce5cb9d7589cda1f29c WHIRLPOOL 5c71c65f940cb999722607128220d6e3562d2c4b0e8ecb63860ab67a63642f7108fcf7b6eb06f3567319e70dbab75f53915af1a2a00b3a32c8ff893987312628
 EBUILD exiftool-9.82.ebuild 645 SHA256 d35650723a2234c7514cc6f2b3c4355a92e05dec73bad8d10081c6ca0b53f359 SHA512 d391f3863deb1258048dcb4211cbe6b669842b761d3225423aa8c610295e4af1cdb996493409d2665adaf07f99b984c8979fdae5a3b6f4458fd858411ec9014b WHIRLPOOL e55dd978e58908bdab39f54134e2a14d7e120f8439061bcfd1007aa2840ba5167e30afaf064678485b767a5cf525e5f5e74b9dcebb5e33597fbb38112817a0f3
-MISC ChangeLog 20320 SHA256 67d1386779ba0be22134b8cf3986165e152b38b226034379518ea723232e0941 SHA512 7a5c4a780fddf64710c85040df0e56c2c0c499f180c90f158e4d030a1a82782aaf0e6f20b7293a0c97dc3d50862dc07b040239a298539eb095880c4da6fbbb61 WHIRLPOOL 2b4222f4cfb332d5bb51b16a79329fef005d0475fa804290e62667a801866fb17b4d8e326efad40a8ea46be5a649a0e580d94ce0c4bc76dc308e144b53c92098
+EBUILD exiftool-9.85.ebuild 645 SHA256 5e6ce9ddfc16744fe1f0cd326dc9f8f211bf3f3953f7d698c2d5451a9cd4c24a SHA512 3769c244002b2fb0e21e4661e8b64df84664e7eeea439a13898311b395ea1db229845fdff677c31b1b4d6b6b5e05514bc3897b6f7b44e0e66d9ff8d4bb1e2bd6 WHIRLPOOL f10ed17a4fd8f078bbf847de732320e14742b09e9d0380c2092a7dd651912af7fd9158838c0a87ca66f5d7497bc6a601cfc262d28576a977f9769e5298d65c84
+MISC ChangeLog 20439 SHA256 084ecc622e16b66a9bf748e3a651e3af6488ea56248dfee8bf473c86900f366c SHA512 b831314b3b2337a4fcd483eb9b0b7b2af2f87abf20c46f834282a3965db343f2d7414f79bfb4b98c67fa5b7694206c48ec0b0cc0fd43398f250d03987c68d6f4 WHIRLPOOL f70974bff9d154ab2b3d5610974742e7818bcafcb0894846019f10f7ebbfc597e070081c7c2f06b24cdacdad4e2248b9c89a7b91a690a48a213fa705cf2913bf
 MISC metadata.xml 9998 SHA256 f881ff06883a68ca0897c4f3b6aa784511026bfd821b9c618cc44704d1aa91cb SHA512 053c5d5c0e16ee59dc0c5456c40ff070f8199ea723880bd49b05d88e1aca419e7ff43c1c42f3ce4442807e9eb702b426b549a55f699a2218eed177f4f56ed012 WHIRLPOOL 1afe82eda0f8cd4846dd0b8f0294fb9fbbdd3eaa65b236c535bc6cae56cce2358473253ade683175c5127cb0a1bec1ed61951bb31b0b50e7c0cfb83dc6bda9f5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJUubyrAAoJEEqz6FtPBkyjvMYH/1EOD+GL3aZ7yp1vcWBYpTVi
-Nkxs0Kc/9zJuDFsOl4gCnwzSBALYjuz1FjEJis1N0uq0CrLVaRAmc9jHf/BUPOGs
-R3UtVLSRaHbp30SYO7PfcxF9F33cEj2IHijSOI+qF7vDmfZbYoz8Yle2mtyEuVao
-ZzLCjV8TGvVJ7ybabaJsZVIkaJqMWkUk7Urlpgda9iNTCCY0DoBKpbJdUFssDgMt
-e4QIcddZsOytR5vV+ThdKgoE3wLu6Urdw2qLEFsSDY2iG/MUNSF+rSCT7yB2ho5A
-B8wrXExvcCTxxCMOixOzt3hi0N2Y0jQPZcu8nSyWxfWHkfGR6kyIQBh1Y+KIKPI=
-=XDz/
+iQEcBAEBCAAGBQJU4tx3AAoJEEqz6FtPBkyjLukH/iS9Qj5adJwmOto7+20cSjSo
+4SEQG8p26zuse4lsqmcsNxoYZP/y45cl35aTsE/Jv/Qisl2LXSYBn3kd1v6AvgZt
+ORXBdFwGGdTEbmjMHoWu6kY8z/QCkN1glMdtLSfoOBiLgB2eJ0DUUEPaQmnFtjSU
+DLF5gEkof91+MRTeo2hHffrINSTZToWMhlwHQCxfg6Ml+tEWhh6iKI7HnwaaG3SP
+Gh1xX1kfjxsfo+fTT4muAcGuno5gHSucNJczTzMopBMDAzczzZeEUv7o1v6FU06w
+0KP2oR/YAsEHe8QlIGhE/5XoJrtOKnTv42Vti7Aqun6D1G7ybvSBN9BFVU6GiW0=
+=LZBT
 -----END PGP SIGNATURE-----
